--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,3 +1,5 @@
+@import '_breakpoints.scss';
+
 /*
 **
 ** Load Fonts
@@ -58,9 +60,13 @@ html {
   --pulp-red: rgb(200, 35, 15);
   --pulp-beige: rgb(220, 200, 145);
 }
+html * {
+  box-sizing: border-box;
+}
 body {
   background: var(--dark-grey);
   margin: 0;
+  width: 100%;
 }
 h1,
 h2,
