--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -80,6 +80,7 @@ html {
   --dark-grey: #0a0a0a;
   --off-white: #f1f0e9;
   --vintage-blue: #358a9d;
+  --vintage-blue: #1a7b79;
 }
 body {
   background: var(--off-white);
