Reset colour styles for body text

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -84,7 +84,7 @@ html {
 }
 body {
   background: var(--off-white);
-  color: var(--off-white);
+  color: var(--dark-grey);
   display: grid;
   font-family: 'Cabin', Arial, Helvetica, sans-serif;
   font-weight: 600;
