--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -69,6 +69,20 @@ ul {
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
+button {
+  background: none;
+  box-sizing: content-box;
+  border: 0;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  text-align: left;
+}
 
 /* 
 **
