--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -100,8 +100,7 @@ select {
 html {
   --dark-grey: #0a0a0a;
   --off-white: #f1f0e9;
-  --vintage-blue: #358a9d;
-  --vintage-blue: #1a7b79;
+  --vintage-blue: #149895;
 }
 body {
   background: var(--off-white);
