--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -100,7 +100,7 @@ select {
 html {
   --dark-grey: #0a0a0a;
   --off-white: #f1f0e9;
-  --vintage-blue: #149895;
+  --vintage-blue: #1899b1;
 }
 body {
   background: var(--off-white);
