--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -41,6 +41,24 @@
     /* Safari, Android, iOS */
       url('./assets/fonts/cabin/cabin-v14-latin-600.svg#Cabin') format('svg'); /* Legacy iOS */
 }
+/* cabin-italic - latin */
+@font-face {
+  font-family: 'Cabin';
+  font-style: italic;
+  font-weight: 400;
+  src: url('./assets/fonts/cabin/cabin-v14-latin-italic.eot'); /* IE9 Compat Modes */
+  src: local('Cabin Italic'), local('Cabin-Italic'),
+    url('./assets/fonts/cabin/cabin-v14-latin-italic.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('./assets/fonts/cabin/cabin-v14-latin-italic.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('./assets/fonts/cabin/cabin-v14-latin-italic.woff') format('woff'),
+    /* Modern Browsers */ url('./assets/fonts/cabin/cabin-v14-latin-italic.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('./assets/fonts/cabin/cabin-v14-latin-italic.svg#Cabin') format('svg'); /* Legacy iOS */
+}
 
 /* 
 **
